fix: removed resume2

--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -85,7 +85,7 @@
         </div>
         {% endif %}
 
-        {% if profile.resume %}
+        {% comment %} {% if profile.resume %}
         <div class="col">
           <div class="d-flex align-items-center">
             <i class="fas fa-file-alt text-info me-2"></i>
@@ -97,7 +97,7 @@
             </a>
           </div>
         </div>
-        {% endif %}
+        {% endif %} {% endcomment %}
       </div>
     </div>
   </div>
